<resources>
    <string name="google_key">AIzaSyAbO1hDRhhQKHs945QBsNt0yCzBXG3X5Fk</string>
    <string name="twitter_consumer_key">euRoJOFhjuSz0PgiDfm87U5y3</string>
    <string name="twitter_consumer_secret">	ZLMmiM3RL9ftD9uenN3tDFu742P1cwJONzllNjC8KpdvNjZuvJ</string>
    <string name="facebook_app_id">466359743713130</string>
    <string name="app_name">KotlinProject</string>
    <string name="notification_channel_id">com.icc.cruuui</string>
    <string name="file_provider_authority" translatable="false">com.webaddicted.kotlinproject.fileprovider</string>
    <string name="network_error">Network Error</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="selected">Selected</string>
    <string name="unselected">Unselected</string>
    <string name="none">None</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="start_progress">Start progress</string>
    <string name="marquee_txt">Marquee txt</string>
    <string name="first_name">First name</string>
    <string name="password">Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="dummyText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmood tempor inciddidunt ut labore et dolore magna sed do sed do aliqua.</string>
    <string name="forcefully_enable_permission">You have forcefully denied some of the required permissions for this action.\nPlease go to permissions and allow them.</string>
    <string name="no_network_msg"><![CDATA[Please check your internet connection &amp; try again]]></string>
    <string name="news_api_key">e5e212cc147343cb9389cfb497c52bc2</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">Loading...</string>
    <string name="something_went_wrong">Something went wrong, please try again</string>
    <string name="pick_image">Choose image</string>
    <string name="news_channel">News channel</string>
    <string name="my_profile">My profile</string>
    <string name="select_picture">Select picture</string>
    <string name="capture_image">Capture image</string>
    <string name="next">Next</string>
    <string name="got_it">Got it</string>
    <string name="skip">Skip</string>
    <string-array name="image_loader">
        <item>app_logo</item>
        <item>flag</item>
        <item>girl</item>
        <item>man</item>
        <item>user</item>
        <item>other image</item>
    </string-array>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email id</string>
    <string name="coding_exper">We pursue a relaxed coding experience</string>
    <string name="full_name">Full name</string>
    <string name="nick_name">Nick name</string>
    <string name="mobile_no">Mobile no</string>
    <string name="error_uppercase_pattern">Password must have atleast one uppercase character !!</string>
    <string name="error_lowercase_pattern">Password must have atleast one lowercase character !!</string>
    <string name="error_digit_pattern">Password must have atleast one digit character !!</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_your_email">Enter email id</string>
    <string name="error_enter_valid_email">Enter valid email id</string>
    <string name="error_email_must_be_different">Email id must be different</string>
    <string name="enter_dob">Enter dob</string>
    <string name="enter_country">Enter country</string>
    <string name="enter_passowrd">Enter password</string>
    <string name="error_passowrd_not_match">Password not match</string>
    <string name="error_password_different">Password must be different</string>
    <string name="error_referral_code">Enter referral code</string>
    <string name="error_valid_code">Enter valid code</string>
    <string name="error_six_digit_code">Enter six digit code</string>
    <string name="confirm_pwd_length">Check confirm password length</string>
    <string name="password_length">Check password length</string>
    <string name="please_enter_correct_password">Please enter correct password</string>
    <string name="create_an_account">Create an account with this email</string>
    <string name="first_name_can_not_blank">First name can\'t blank</string>
    <string name="enter_mobile_no">Mobile number can\'t blank</string>
    <string name="enter_valid_mobile_no">Enter valid mobile no</string>
    <string name="select_language">Select language</string>
    <string name="submit">Submit</string>
    <string name="please_select_language">Please select your preferred language</string>
    <string name="txt_no_data_found">No data found</string>
    <string name="google_map">Google map</string>
    <string name="draw_polyline">Draw polyline</string>
    <string name="task_title">Task</string>
    <string name="google_map_title" >Google map</string>
    <string name="geo_fencing">Geo fencing</string>
    <string name="geo_fencing_stop">Geo fancy stop</string>
    <string name="geo_fencing_start">Geo fancing start</string>
    <string name="circle_title">Circle view</string>
    <string name="widget_title">Widget</string>
    <string name="calendar_title">Calendar</string>
    <string name="generate_hash_code">Generate hash code</string>
    <string name="sms_retriever_title">SMS retriever</string>
    <string name="otp_code_is">OTP code is</string>
    <string name="refresh_hash_code"><![CDATA[Refresh hash code before sending code\n <#> Your ExampleApp code is: 123ABC78     \nFA+9qCX9VSu]]></string>
    <string name="webview_title">Webview</string>
    <string name="six_digit_otp">You will receive a 6-digit confirmation\n code via SMS to</string>
    <string name="back">Back</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo_library">Photo library</string>
    <string name="back_online">Back online</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="single_event_dialog">Single event dialog</string>
    <string name="two_event_dialog">Two event dialog</string>
    <string name="three_event_dialog">Three event dialog</string>
    <string name="custom_dialog">Custom dialog</string>
    <string name="dialog_fragment">Dialog fragment</string>
    <string name="list_dialog">List dialog</string>
    <string name="selection_list_dialog">Selection list dialog</string>
    <string name="select_country">Select country</string>
    <string name="dialog_title">Dialog</string>
    <string name="search">Search</string>
    <string name="normal_webview">Normal Webview</string>
    <string name="click_webview">WebView btn click</string>
    <string name="web_file_choose">Web file choose</string>
    <string name="date">Date</string>
    <string name="particulars">Particulars</string>
    <string name="vch_type">VCH Type</string>
    <string name="vch_no">VCH No</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="total_amount">Total Amount</string>
    <string name="dynamic_title">Dynamic Layout</string>
    <string name="set_value_in_preference">Set Value</string>
    <string name="get_value">Get Value</string>
    <string name="remove_key">Remove Key</string>
    <string name="clear_preference">Clear Preference</string>
    <string name="shared_pref_title">Shared Preference</string>
    <string name="user_info_saved">User info saved successfully</string>
    <string name="pref_cleared_successfully">Preference cleared successfully</string>
    <string name="blink">Blink</string>
    <string name="fade">Fade</string>
    <string name="zoom">Zoom</string>
    <string name="move">Move</string>
    <string name="rotate">Rotate</string>
    <string name="fade_in">Fade In</string>
    <string name="fade_out">Fade Out</string>
    <string name="cross_fade_out">Cross Fade Out</string>
    <string name="cross_fade_in">Cross Fade In</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="slide_up">Slide Up</string>
    <string name="slide_down">Slide Down</string>
    <string name="bounce">Bounce</string>
    <string name="sequence">Sequence</string>
    <string name="together">Together</string>
    <string name="left_right">Left Right</string>
    <string name="top_to_bottom">Top To Bottom</string>
    <string name="botom_to_top">Bottom To Top</string>
    <string name="right_to_left">Right To Left</string>
    <string name="left_to_right">Left To Right</string>
    <string name="animation_title">Animation</string>
    <string name="share_text">Share Text</string>
    <string name="share_image">Share Image</string>
    <string name="share_image_text">Share Image Text</string>
    <string name="share_local_image">Share Local Image</string>
    <string name="send_image_text_email">Send Image Text Email</string>
    <string name="share_title">Share Data On Social</string>
    <string name="text_to_speech">Text to speech</string>
    <string name="speech_to_text">Speech To Text</string>
    <string name="list">ListView</string>
    <string name="normal">Normal</string>
    <string name="custom">Custom</string>
    <string name="normal_service">Normal Service</string>
    <string name="start_normal_service">Start normal service</string>
    <string name="stop_normal_service">Stop normal service</string>
    <string name="bind_service">Bind Service</string>
    <string name="start_bind_service">Start bind service</string>
    <string name="stop_bind_service">Stop bind service</string>
    <string name="intent_service">Intent Service</string>
    <string name="start_intent_service">Start intent service</string>
    <string name="stop_intent_service">Stop intent service</string>
    <string name="launch">Launch</string>
    <string name="sequentially">Sequentially</string>
    <string name="launch_timeout">Launch Timeout</string>
    <string name="exception_handler">Exception Handler</string>
    <string name="lifecycle_aware">Lifecycle Aware</string>
    <string name="android_scoped">Android Scoped</string>
    <string name="parallel_async">Parallel Async</string>
    <string name="download_open_pdf">Download and open PDF</string>
    <string name="large_text">Large Text</string>
    <string name="add_message">Add message</string>
    <string name="url">Url</string>
    <string name="action">Action</string>
    <string name="big_picture">Big Picture</string>
    <string name="inbox_style">Inbox Style</string>
    <string name="periodic_work_req">Perodic work request</string>
    <string name="one_time_work_request">"One Time Work Request "</string>
    <string name="chaining_works">Chaining Works</string>
    <string name="forground_service">Forground Service</string>
    <string name="start_forground_service">Start Forground Service</string>
    <string name="stop_forground_service">Stop Forground Service</string>
    <string name="whats_app_type_noti">Whats app type notification</string>
</resources>