<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_title"
                    style="@style/TextView_Heading"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/txt_message"
                    style="@style/TextView_Regular"
                    android:layout_marginLeft="@dimen/dp15"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginRight="@dimen/dp15"
                    android:gravity="center"
                    android:text="@string/dummyText" />

                <Button
                    android:id="@+id/btn_ok"
                    style="@style/Button"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/ok" />

                <TextView
                    android:id="@+id/txt_cancel"
                    style="@style/TextView_Heading"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp15"
                    android:text="@string/cancel" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>