<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

        <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <Button
                android:id="@+id/btn_one_time"
                style="@style/Button"
                android:layout_marginTop="@dimen/dp15"
                android:paddingLeft="@dimen/dp20"
                android:paddingRight="@dimen/dp20"
                android:text="@string/one_time_work_request" />

        <Button
                android:id="@+id/btn_periodic_req"
                style="@style/Button"
                android:layout_marginTop="@dimen/dp15"
                android:paddingLeft="@dimen/dp20"
                android:paddingRight="@dimen/dp20"
                android:text="@string/periodic_work_req" />

        <Button
                android:id="@+id/btn_chaining_works"
                style="@style/Button"
                android:layout_marginTop="@dimen/dp15"
                android:text="@string/chaining_works" />
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>